// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`custom type check reducer should throw error (with custom message) 1`] = `
"Entity type check failed!
Actual type: boolean
Input value: false
Hello the world is collapsing."
`;

exports[`custom type check reducer should throw error (with expected type) 1`] = `
"Entity type check failed!
Expected type: non-empty array
Actual type: boolean
Input value: false"
`;

exports[`custom type check reducer should throw error for invalid input 1`] = `
"Entity type check failed!
Actual type: boolean
Input value: false"
`;

exports[`isArray It should throw error when not matched 1`] = `
"Entity type check failed!
Expected type: array
Actual type: string
Input value: 'foo'"
`;

exports[`isBoolean It should throw error when not matched 1`] = `
"Entity type check failed!
Expected type: boolean
Actual type: string
Input value: 'foo'"
`;

exports[`isBoolean It should throw error when not matched 2`] = `
"Entity type check failed!
Expected type: boolean
Actual type: string
Input value: 'foo'"
`;

exports[`isError It should throw error when not matched 1`] = `
"Entity type check failed!
Expected type: error
Actual type: string
Input value: 'foo'"
`;

exports[`isFunction It should throw error when not matched 1`] = `
"Entity type check failed!
Expected type: function
Actual type: string
Input value: 'foo'"
`;

exports[`isNumber It should throw error when not matched 1`] = `
"Entity type check failed!
Expected type: number
Actual type: string
Input value: 'foo'"
`;

exports[`isObject It should throw error when not matched 1`] = `
"Entity type check failed!
Expected type: object
Actual type: array
Input value: []"
`;

exports[`isString It should throw error when not matched 1`] = `
"Entity type check failed!
Expected type: string
Actual type: number
Input value: 1"
`;
